--- a/seumich/templates/seumich/student_list_partial.html
+++ b/seumich/templates/seumich/student_list_partial.html
@@ -34,28 +34,30 @@
                     </th>
                     <td class="hide-small">{{ student.univ_id }}</td>
                     <td>
-                        {% for classSite in student.studentclasssitestatus_set.all %}
-                            <a href="{% url 'seumich:student_class' student.username classSite.class_site.code %}" class="class-site-status-link">
-                                {% with status=classSite.status.description %}
-                                {% if status == 'Green' %}
-                                    <span data-toggle="tooltip" title="{{ classSite.class_site.description }}: Encourage" data-placement="bottom">
+                        {% for element in student.studentclasssitestatus_set.all %}
+                            {% with class_site=element.class_site %}
+                            <a href="{% url 'seumich:student_class' student.username class_site.code %}" class="class-site-status-link">
+                                {% with status=element.status %}
+                                {% if status.description == 'Green' %}
+                                    <span data-toggle="tooltip" title="{{ class_site.description }}: Encourage" data-placement="bottom">
                                         <img src="{% static 'seumich/images/Status_Icons_Green.png' %}" alt="Green encourage status icon" width="25px" hspace="3"></img>
                                     </span>
-                                {% elif status == 'Yellow' %}
-                                    <span data-toggle="tooltip" title="{{ classSite.class_site.description }}: Explore" data-placement="bottom">
+                                {% elif status.description == 'Yellow' %}
+                                    <span data-toggle="tooltip" title="{{ class_site.description }}: Explore" data-placement="bottom">
                                         <img src="{% static 'seumich/images/Status_Icons_Yellow.png' %}" alt="Yellow explore status icon" width="25px" hspace="3"></img>
                                     </span>
-                                {% elif status == 'Red' %}
-                                    <span data-toggle="tooltip" title="{{ classSite.class_site.description }}: Engage" data-placement="bottom">
+                                {% elif status.description == 'Red' %}
+                                    <span data-toggle="tooltip" title="{{ class_site.description }}: Engage" data-placement="bottom">
                                         <img src="{% static 'seumich/images/Status_Icons_Red.png' %}" alt="Red engage status icon" width="25px" hspace="3"></img>
                                     </span>
-                                {% elif status == 'Not Applicable' %}
-                                    <span data-toggle="tooltip" title="{{ classSite.class_site.description }}: No data" data-placement="bottom">
+                                {% elif status.description == 'Not Applicable' %}
+                                    <span data-toggle="tooltip" title="{{ class_site.description }}: No data" data-placement="bottom">
                                         <img src="{% static 'seumich/images/Status_Icons_Not Applicable.png' %}" alt="no status available for this course icon" width="25px" hspace="3"></img>
                                     </span>
                                 {% endif %}
                                 {% endwith %}
                             </a>
+                            {% endwith %}
                         {% endfor %}
                     </td>
                     <td class="hide-small">
