--- a/seumich/templates/seumich/student_class_site_detail.html
+++ b/seumich/templates/seumich/student_class_site_detail.html
@@ -24,29 +24,31 @@
                 <div class="student-detail-left-menu-course-line">
                     <input type="hidden" id="student-username" value="{{ student.username }}">
                 </div>
-                {% for courseSite in student.studentclasssitestatus_set.all %}
-                    <div class="student-detail-left-menu-courses" id="student-menu-{{ courseSite.class_site.code }}" onclick="location.href='{% url "seumich:student_class" student.username courseSite.class_site.code %}';">
-                        <h3>{{courseSite.class_site.description}}</h3>
-                        {% with status=courseSite.status.description %}
-                        {% if status == 'Green' %}
+                {% for element in student.studentclasssitestatus_set.all %}
+                    {% with class_site=element.class_site %}
+                    <div class="student-detail-left-menu-courses" id="student-menu-{{ class_site.code }}" onclick="location.href='{% url "seumich:student_class" student.username class_site.code %}';">
+                        <h3>{{class_site.description}}</h3>
+                        {% with status=element.status %}
+                        {% if status.description == 'Green' %}
                             <a href="#" data-toggle="tooltip" title="Encourage" data-placement="bottom">
                                 <img src="{% static 'seumich/images/Status_Icons_Green.png' %}" alt="Green encourage status icon" width="25px" hspace="3"></img>
                             </a>
-                        {% elif status == 'Yellow' %}
+                        {% elif status.description == 'Yellow' %}
                             <a href="#" data-toggle="tooltip" title="Explore" data-placement="bottom">
                                 <img src="{% static 'seumich/images/Status_Icons_Yellow.png' %}" alt="Yellow explore status icon" width="25px" hspace="3"></img>
                             </a>
-                        {% elif status == 'Red' %}
+                        {% elif status.description == 'Red' %}
                             <a href="#" data-toggle="tooltip" title="Engage" data-placement="bottom">
                                 <img src="{% static 'seumich/images/Status_Icons_Red.png' %}" alt="Red engage status icon" width="25px" hspace="3"></img>
                             </a>
-                        {% elif status == 'Not Applicable' %}
+                        {% elif status.description == 'Not Applicable' %}
                             <a href="#" data-toggle="tooltip" title="No data" data-placement="bottom">
                                 <img src="{% static 'seumich/images/Status_Icons_Not Applicable.png' %}" alt="no status available for this course icon" width="25px" hspace="3"></img>
                             </a>
                         {% endif %}
                         {% endwith %}
                     </div>
+                    {% endwith %}
                 {% endfor %}
             </div>
         </div>
