Apply SE Style Guide to code
Transform style files to use new color scheme

--- a/seumich/static/seumich/styles/_secolor.scss
+++ b/seumich/static/seumich/styles/_secolor.scss
@@ -1,29 +1,20 @@
-$color_star_dust_approx: #9d9d9d;
-$color_pumice_approx: #c8c8c8;
-$color_celeste_approx: #ccc;
-$black: #000;
-$color_astral_approx: #3072ab;
-$color_big_stone_approx: #1c3144;
-$color_mexican_red_approx: brown;
-$color_pink_approx: rgba(255, 200, 200, 1);
-$white: white;
-$mercury: #e5e5e5;
-$color_alabaster_approx: #f9f9f9;
-$color_san_marino_approx: #3e6c9c;
-$color_quill_gray_approx: #d4d4d4;
-$color_gallery_approx: #eee;
-$color_tapa_approx: #777;
-$color_sea_mist_approx: #c8d6c7;
-$color_st_tropaz_approx: #255c91;
-$color_confetti_approx: #f0d654;
-$color_black_haze_75_approx: rgba(247, 247, 247, 0.75);
-$color_cararra_approx: #ebebeb;
-$color_denim_approx: #1f77b4;
-$color_wild_sand_approx: whitesmoke;
-$color_astronaut_blue_approx: #124465;
-$color_alto_approx: #dedede;
-$color_steel_blue_approx: #337ab7;
-$gray:  gray;
-$light-gray-background: #F9F9F9;
-$gray-hover-state: #E5E5E5;
-$gray-active-state: #CCCCCC;
+$color_university_blue: rgb(0, 39, 76);
+$color_cobalt_blue_alt: rgb(100, 150, 192);
+$color_active_gray: rgb(204, 204, 204);
+$color_hover_gray: rgb(229, 229, 229);
+$color_background_gray: rgb(249, 249, 249);
+$color_coral_green: rgb(144, 176, 148);
+$color_coral_green_alt: rgb(172, 196, 175);
+$color_jasmine_yellow: rgb(244, 224, 127);
+$color_jasmine_yellow_alt: rgb(247, 232, 159);
+$color_engage_red: rgb(193, 39, 45);
+$color_explore_orange: rgb(247, 167, 57);
+$color_encourage_green: rgb(41, 163, 108);
+$color_white: rgb(255, 255, 255);
+$color_black: rgb(0, 0, 0);
+$color_student_detail_background: rgb(48,114,171);
+$color_nav_background: rgb(28,49,68);
+$color_nav_hover: rgb(18, 68, 101);
+$color_lms_activity: rgb(190,205,192);
+$color_student_average: rgb(91,133,172);
+$color_course_average: rgb(244,224,117);
