--- a/usage/templates/usage.html
+++ b/usage/templates/usage.html
@@ -12,13 +12,13 @@
 
         <script>
             function getDateOfISOWeek(w, y) {
-                var simple = new Date(Date.UTC(y, 0, 1 + (w - 1) * 7));
-                var dow = simple.getUTCDay();
+                var simple = new Date(y, 0, 1 + (w - 1) * 7);
+                var dow = simple.getDay();
                 var ISOweekStart = simple;
                 if (dow <= 4)
-                    ISOweekStart.setUTCDate(simple.getUTCDate() - simple.getUTCDay() + 1);
+                    ISOweekStart.setDate(simple.getDate() - simple.getDay() + 1);
                 else
-                    ISOweekStart.setUTCDate(simple.getUTCDate() + 8 - simple.getUTCDay());
+                    ISOweekStart.setDate(simple.getDate() + 8 - simple.getDay());
                 return ISOweekStart;
             }
 
